--- a/CSharp/Day09/Day09.csproj
+++ b/CSharp/Day09/Day09.csproj
@@ -4,6 +4,10 @@
     <ProjectReference Include="..\..\AdventUtilities\AdventUtilities.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Drawing.Common" Version="10.0.1" />
+  </ItemGroup>
+
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net10.0</TargetFramework>
